# homie5

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: README_controller.md  README_device.md  controller_example.rs  device_example.rs  device_mini_example.rs
examples/common/: mod.rs  mqtt.rs
examples/controller/: mod.rs  property_store.rs
examples/devices/: homie_device.rs  light_device.rs  mod.rs
src/: client.rs  controller_proto.rs  device_description.rs  device_proto.rs  device_ref.rs  error.rs  homie5_message.rs  homie_domain.rs  homie_id.rs  lib.rs  node_ref.rs  property_ref.rs  statemachine.rs  value.rs  values.rs
src/device_description/: builder.rs  mod.rs  number_ranges.rs  property_format.rs
src/extensions/: meta_ext.rs  mod.rs
src/extensions/meta/: controller_proto.rs  error.rs  message.rs  mod.rs  provider_proto.rs  topic.rs  types.rs
src/homie_ref/: device_ref.rs  mod.rs  node_ref.rs  property_pointer.rs  property_ref.rs
tests/: datatypes.rs  formats.rs  homie5_message.rs  homie_id.rs  homie_value.rs  homie_value_serde.rs  identifiers.rs  number_ranges.rs
tests/common/: mod.rs
