[package]
name = "homie5"
version = "0.3.0"
edition = "2021"
publish = true
description = "Low level implemenation of the homie v5 protocol"
repository = "https://github.com/schaze/homie5"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "iot", "mqtt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = { version = "1.11", default-features = true }
thiserror = "1.0"
log = "0.4.22"

[dev-dependencies]
rumqttc = "0.24.0"
futures = "0.3.28"
bytes = "1.5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.75"
ctrlc = "3.1"
log = "0.4"
env_logger = "0.9"
serde_yaml = "0.9"

