[package]
name = "homie5"
version = "0.8.1"
edition = "2021"
publish = true
description = "Low level implemenation of the homie v5 protocol"
repository = "https://github.com/schaze/homie5"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "iot", "mqtt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "serde"] }
foldhash = { version = "0.2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
speedate = { version = "0.17.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
rumqttc = "0.25.0"
futures = "0.3.28"
bytes = "1.5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.75"
chrono = "0.4.38"
ctrlc = "3.1"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"

[features]
default = ["std"]
std = ["serde/std"]
