[package]
name = "homie5"
version = "0.11.0"
edition = "2021"
publish = true
description = "Low level implemenation of the homie v5 protocol"
repository = "https://github.com/schaze/homie5"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "iot", "mqtt"]

[features]
ext-meta = []
legacy-cow = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
thiserror = "2.0"
log = "0.4"
schemars = "1.2"

[dev-dependencies]
rumqttc = "0.25"
bytes = "1"
tokio = { version = "1.52", features = ["full"] }
anyhow = "1"
ctrlc = "3.5"
env_logger = "0.11"
serde_yaml_ng = "0.10"
